@@ -1,109 +1,0 @@
-                                Release Summary
-
-                              asterisk-11.3.0-rc2
-
-                                Date: 2013-03-27
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-11.3.0-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   5 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 383967   | bebuild | Create 11.3.0-rc2             |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 383970   | bebuild | Update version, remove        |                   |
-   |          |         | summaries, merge blockers     |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 383971   | bebuild | Merge r383878 for             |                   |
-   |          |         | ASTERISK-21068                |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 384085   | bebuild | Merge security patches;       |                   |
-   |          |         | regression fixes              |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 384090   | bebuild | Update ChangeLog              |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                                  |    2
- ChangeLog                                 |  191 +++++++
- apps/app_confbridge.c                     |   66 ++
- apps/app_page.c                           |   89 ++-
- apps/app_voicemail.c                      |   19
- apps/confbridge/conf_state_multi_marked.c |    8
- asterisk-11.3.0-rc1-summary.html          |  583 ------------------------
- asterisk-11.3.0-rc1-summary.txt           |  726 ------------------------------
- channels/chan_sip.c                       |  161 ++++--
- channels/sip/include/sip.h                |    1
- channels/sip/security_events.c            |    3
- main/cdr.c                                |   24
- main/event.c                              |    7
- main/http.c                               |    9
- main/rtp_engine.c                         |   13
- res/res_format_attr_h264.c                |   11
- res/res_rtp_asterisk.c                    |    2
- 17 files changed, 483 insertions(+), 1432 deletions(-)
-
-     ----------------------------------------------------------------------
